[TVB-879] Fix URL creation for special character handling